Update plugin to use task name strings and simplify KMP configuration
- Use task name strings instead of TaskProvider for dependencies to avoid configuration phase errors
- Simplify KMP configuration by removing automatic task wiring (manual execution required)
- Note: Android/KMP projects currently require manual task execution due to Gradle configuration constraints